js/js.translator/testData/incremental/invalidation/typealiasChange/lib1/l1.0.kt
typealias Payload = Int

fun payload(): Payload = 0
